template head and footer js

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<?php include('head.php') ?>
+<span id="head"></span>
+
 <body>
     <header id="main" class="style_header">
       <div class="container_header">
@@ -14,5 +15,8 @@
     <section>
       
     </section>
+    
+    <script src="./assets/template_head.js" defer></script>
+    <script src="./assets/template_footer.js" defer></script>
 
-<?php include('footer.php') ?>
+<span id="footer"></span>
