--- a/index.html
+++ b/index.html
@@ -1,7 +1,33 @@
-<span id="head"></span>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta property="og:locale" content="pt_BR" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://auratrip.com.br/" />
+    <meta property="og:title" content="Auratrip - TCC Fatec Rubens Lara" />
+    <meta property="og:site_name" content="Auratrip" />
+    <meta property="og:description" content="Auratrip - Planejamento de viagens e Informações sobre lugares" />
+
+    <meta property="og:image" content="https://ik.imagekit.io/bistecbr/bistec_metatag.jpg" />
+    <meta property="og:image:type" content="image/jpg" />
+    <meta property="og:image:alt" content="Logo Auratrip" />
+    <meta property="og:image:width" content="300" />
+    <meta property="og:image:height" content="400" />
+
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Auratrip - TCC Fatec Rubens Lara.">
+    <!-- google site verification -->
+    <meta name="google-site-verification" content="z_lH9tH0wbjtMz-3Gxh-qzwu25t_HTu6qWTVMIgMeiQ" />
+    <title>Auratrip</title>
+    <link rel="icon" href="assets/iconpngauratrip.png">
+    <link rel="stylesheet" href="assets/style.css">
+</head>
 
 <body>
     <header id="main" class="style_header">
+
       <div class="container_header">
             <a href="index.php"><img class="logo_img" src="assets/auratrip-png.png" alt="logo"></a>
             <ul class="buttons" id="home">
@@ -11,12 +37,35 @@
                 <li><a href="#">Entrar</a></li>
             </ul>
         </div>
+        <div class="pesquisabutton">
+            <input type="text" name="Barra de pesquisa" placeholder="Pesquise aqui:" id="search">
+            <input type="button" value="Buscar" id="buscar">
+        </div>
     </header>
     <section>
-      
+        <div class="container">
+            <div class="presentation">
+                <div class="card">Teste 1</div>
+                <div class="card">Teste 2</div>
+                <div class="card">Teste 3</div>
+            </div>
+        </div>
     </section>
+    <footer>
+        <p>
+            <h2 class="teste">AuraTrip</h2>
+            <h3 class="teste">Siga-nos em nossas redes sociais</h3>
+        </p>
+        <p>  
+            <a title="Facebook Auratrip" href="#" target="_blank"><ion-icon name="logo-facebook"></ion-icon></a>
+            <a title="Instagram Auratrip" href="https://instagram.com/auratrip_" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
+            <a title="Tiktok Auratrip" href="#" target="_blank"><ion-icon name="logo-tiktok"></ion-icon></a>
+        </p>
+    </footer>
+    <div class="copyright">
+        <p>&copy; Auratrip - Todos os Direitos Reservados</p>
+    </div>
     
-    <script src="./assets/template_head.js" defer></script>
-    <script src="./assets/template_footer.js" defer></script>
-
-<span id="footer"></span>
+    </body>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+</html>
