back to top button and styling contact page

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <a href="index.php"><img class="logo_img" src="assets/auratrip-png.png" alt="logo"></a>
             <ul class="buttons" id="home">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Criar</a></li>
+                <li><a href="#">Postar</a></li>
                 <li><a href="#">Roteiros</a></li>
-                <li><a href="#">Entrar</a></li>
+                <li><a href="contato.html">Contato</a></li>
             </ul>
         </div>
         <div class="pesquisabutton">
@@ -66,6 +66,7 @@
         <p>&copy; Auratrip - Todos os Direitos Reservados</p>
     </div>
     
+    <script src="assets/script.js"></script>
     </body>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 </html>
