--- a/posPost.html
+++ b/posPost.html
@@ -43,25 +43,26 @@
           <li><a href="contato.html">Contato</a></li>
         </ul>
       </div>
-      <div class="pesquisabutton">
-        <input
-          type="text"
-          name="Barra de pesquisa"
-          placeholder="Pesquise aqui:"
-          id="search"
-        />
-        <input type="button" value="Buscar" id="buscar" />
-      </div>
     </header>
-    <section>
-      <div class="container">
-        <div class="presentation">
-          <div class="card">Teste 1</div>
-          <div class="card">Teste 2</div>
-          <div class="card">Teste 3</div>
+    <div class="exemplo-post">
+      <fieldset>
+        <legend>Guilherme Crispim</legend>
+        <img src="assets/paisagem.jpg" alt="paisagem" />
+        <div class="info-post">
+          <h3>Paisagem Local X</h3>
+          <br />
+          <h4>Comentários</h4>
+          <ul>
+            <li><img scr="" alt="foto de perfil" /> lugar bonito</li>
+            <button id="like">Like</button>
+            <li><img scr="" alt="foto de perfil" />onde fica?</li>
+            <button id="like">Like</button>
+            <li><img scr="" alt="foto de perfil" />what a beautiful place</li>
+            <button id="like">Like</button>
+          </ul>
         </div>
-      </div>
-    </section>
+      </fieldset>
+    </div>
     <footer>
       <h2 class="teste">AuraTrip</h2>
       <h3 class="teste">Siga-nos em nossas redes sociais</h3>
