--- a/posContato.html
+++ b/posContato.html
@@ -25,16 +25,19 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-    <header>
-        <div class="container_header">
-          <a href="index.php"><img class="logo_img" src="assets/auratrip-png.png" alt="logo"></a>
-          <ul class="buttons" id="home">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="#">Criar</a></li>
-              <li><a href="#">Roteiros</a></li>
-              <li><a href="contato.html">Contato</a></li>
-          </ul>
-        </div>
+    <header id="main" class="style_header">
+
+      <div class="container_header">
+        <a href="index.php"
+          ><img class="logo_img" src="assets/auratrip-png.png" alt="logo"
+        /></a>
+        <ul class="buttons" id="home">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="postar.html">Postar</a></li>
+          <li><a href="#">Roteiros</a></li>
+          <li><a href="contato.html">Contato</a></li>
+        </ul>
+      </div>
     </header>
     <section>
         <h1>E-mail enviado com sucesso!</h1>
