--- a/norway.html
+++ b/norway.html
@@ -28,6 +28,7 @@
         <title>Auratrip</title>
         <link rel="icon" href="assets/iconpngauratrip.png" />
         <link rel="stylesheet" href="assets/style.css" />
+        <link rel="stylesheet" href="assets/norway.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css">
     </head>
 
@@ -48,7 +49,66 @@
         </header>
 
         <section id="section_cards">
-            <h1>Noruega!</h1>
+          <div class="container">
+            <div class="title_cards"><h1>Lugares insanos da Noruega</h1></div>
+            <div class="presentation_country">
+                <div class="card" style="margin: 15px;">
+                  <img src="https://res.cloudinary.com/dlsuopwkn/image/upload/c_scale,h_3264,w_4928/v1671675718/preikestolen.jpg" class="card-img-top" alt="Noruega">
+                  <div class="card-body">
+                    <h5 class="card-title" style="margin-bottom: 0;">Preikestolen</h5>
+                    <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                  </div>
+                </div>
+
+                <div class="card" style="margin: 15px;">
+                  <img src="https://res.cloudinary.com/dlsuopwkn/image/upload/v1672024200/Trolltunga.jpg" class="card-img-top" alt="Noruega">
+                  <div class="card-body">
+                    <h5 class="card-title" style="margin-bottom: 0;">Trolltunga</h5>
+                    <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                  </div>
+                </div>
+
+                <div class="card" style="margin: 15px;">
+                  <img src="https://res.cloudinary.com/dlsuopwkn/image/upload/c_scale,h_3264,w_4928/v1672024309/Atlanterhavsvegen.jpg" class="card-img-top" alt="Noruega">
+                  <div class="card-body">
+                    <h5 class="card-title" style="margin-bottom: 0;">Atlanterhavsvegen</h5>
+                    <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                  </div>
+                </div>
+
+                <div class="card" style="margin: 15px;">
+                  <img src="https://res.cloudinary.com/dlsuopwkn/image/upload/v1672321549/lofoten_soccerfield.png" class="card-img-top" alt="Noruega">
+                  <div class="card-body">
+                    <h5 class="card-title" style="margin-bottom: 0;">Lofoten Islands</h5>
+                    <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                  </div>
+                </div>
+
+                <div class="card" style="margin: 15px;">
+                  <img src="https://res.cloudinary.com/dlsuopwkn/image/upload/c_scale,h_3264,w_4928/v1672024199/tromso.jpg" class="card-img-top" alt="Noruega">
+                  <div class="card-body">
+                    <h5 class="card-title" style="margin-bottom: 0;">Tromsø</h5>
+                    <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                  </div>
+                </div>
+
+                <div class="card" style="margin: 15px;">
+                  <img src="https://res.cloudinary.com/dlsuopwkn/image/upload/c_scale,h_3264,w_4928/v1672024197/kjeragbolten.jpg" class="card-img-top" alt="Noruega">
+                  <div class="card-body">
+                    <h5 class="card-title" style="margin-bottom: 0;">Kjeragbolten</h5>
+                    <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                  </div>
+                </div>
+            </div>
+          </div>
+
+          
         </section>
 
         <footer>
