--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               </div>
             </div>
             <div class="card" style="width: 18rem;">
-              <img src="assets/canada.jpg" class="card-img-top" alt="...">
+              <img src="assets/canada.jpg" class="card-img-top" alt="Canadá">
               <div class="card-body">
                 <h5 class="card-title" style="margin-bottom: 0;">Canadá</h5>
                 <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -136,7 +136,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-              <img src="assets/southafrica.jpg" class="card-img-top" alt="...">
+              <img src="assets/southafrica.jpg" class="card-img-top" alt="África do Sul">
               <div class="card-body">
                 <h5 class="card-title" style="margin-bottom: 0;">África do Sul</h5>
                 <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -145,7 +145,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-              <img src="assets/mexico.jpg" class="card-img-top" alt="...">
+              <img src="assets/mexico.jpg" class="card-img-top" alt="México">
               <div class="card-body">
                 <h5 class="card-title" style="margin-bottom: 0;">México</h5>
                 <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -154,9 +154,117 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-              <img src="assets/novazelandia.jpg" class="card-img-top" alt="...">
+              <img src="assets/novazelandia.jpg" class="card-img-top" alt="Nova Zelândia">
               <div class="card-body">
                 <h5 class="card-title" style="margin-bottom: 0;">Nova Zelândia</h5>
+                <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a> -->
+              </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+              <img src="assets/alemanha.jpg" class="card-img-top" alt="Alemanha">
+              <div class="card-body">
+                <h5 class="card-title" style="margin-bottom: 0;">Alemanha</h5>
+                <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a> -->
+              </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+              <img src="assets/egito.jpg" class="card-img-top" alt="Egito">
+              <div class="card-body">
+                <h5 class="card-title" style="margin-bottom: 0;">Egito</h5>
+                <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a> -->
+              </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+              <img src="assets/italia.jpg" class="card-img-top" alt="Itália">
+              <div class="card-body">
+                <h5 class="card-title" style="margin-bottom: 0;">Itália</h5>
+                <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a> -->
+              </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+              <img src="assets/grecia.jpg" class="card-img-top" alt="Grécia">
+              <div class="card-body">
+                <h5 class="card-title" style="margin-bottom: 0;">Grécia</h5>
+                <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a> -->
+              </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+              <img src="assets/paris.jpg" class="card-img-top" alt="França">
+              <div class="card-body">
+                <h5 class="card-title" style="margin-bottom: 0;">França</h5>
+                <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a> -->
+              </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+              <img src="assets/india.jpg" class="card-img-top" alt="Índia">
+              <div class="card-body">
+                <h5 class="card-title" style="margin-bottom: 0;">Índia</h5>
+                <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a> -->
+              </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+              <img src="assets/letonia.jpg" class="card-img-top" alt="Letônia">
+              <div class="card-body">
+                <h5 class="card-title" style="margin-bottom: 0;">Letônia</h5>
+                <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a> -->
+              </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+              <img src="assets/malasia.jpg" class="card-img-top" alt="Malásia">
+              <div class="card-body">
+                <h5 class="card-title" style="margin-bottom: 0;">Malásia</h5>
+                <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a> -->
+              </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+              <img src="assets/japao.jpg" class="card-img-top" alt="Japão">
+              <div class="card-body">
+                <h5 class="card-title" style="margin-bottom: 0;">Japão</h5>
+                <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a> -->
+              </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+              <img src="assets/belgica.jpg" class="card-img-top" alt="Bélgica">
+              <div class="card-body">
+                <h5 class="card-title" style="margin-bottom: 0;">Bélgica</h5>
+                <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a> -->
+              </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+              <img src="assets/dinamarca.jpg" class="card-img-top" alt="Dinamarca">
+              <div class="card-body">
+                <h5 class="card-title" style="margin-bottom: 0;">Dinamarca</h5>
+                <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a> -->
+              </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+              <img src="assets/slovenia.jpg" class="card-img-top" alt="Eslovênia">
+              <div class="card-body">
+                <h5 class="card-title" style="margin-bottom: 0;">Eslovênia</h5>
                 <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <a href="#" class="btn btn-primary">Go somewhere</a> -->
               </div>
