--- a/contato.html
+++ b/contato.html
@@ -34,7 +34,7 @@
     <link rel="stylesheet" href="assets/style.css" />
   </head>
   <body>
-    <header>
+    <header id="iceland_contact" class="style_header">
       <div class="container_header">
         <a href="index.php"
           ><img class="logo_img" src="assets/auratrip-png.png" alt="logo"
