link style css pages

--- a/posContato.html
+++ b/posContato.html
@@ -22,7 +22,8 @@
     <meta name="google-site-verification" content="z_lH9tH0wbjtMz-3Gxh-qzwu25t_HTu6qWTVMIgMeiQ" />
     <title>Auratrip</title>
     <link rel="icon" href="assets/iconpngauratrip.png">
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/styleMobile.css" />
 </head>
 <body>
     <header id="main" class="style_header">
