--- a/posPost.html
+++ b/posPost.html
@@ -27,7 +27,8 @@
     />
     <title>Auratrip</title>
     <link rel="icon" href="assets/iconpngauratrip.png" />
-    <link rel="stylesheet" href="assets/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/styleMobile.css" />
   </head>
 
   <body>
