--- a/contato.html
+++ b/contato.html
@@ -31,7 +31,8 @@
     />
     <title>Auratrip</title>
     <link rel="icon" href="assets/iconpngauratrip.png" />
-    <link rel="stylesheet" href="assets/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/styleMobile.css" />
   </head>
   <body>
     <header id="iceland_contact" class="style_header">
