--- a/norway.html
+++ b/norway.html
@@ -27,7 +27,8 @@
         />
         <title>Auratrip</title>
         <link rel="icon" href="assets/iconpngauratrip.png" />
-        <link rel="stylesheet" href="assets/style.css" />
+        <link rel="stylesheet" href="assets/css/style.css" />
+        <link rel="stylesheet" href="assets/css/styleMobile.css" />
         <link rel="stylesheet" href="assets/norway.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css">
     </head>
