--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <li><a href="#">Roteiros</a></li>
         <li><a href="contato.html">Contato</a></li>
       </ul>
+      <div class="menucell"><ion-icon name="menu-outline"></ion-icon></div>
     </div>
     <div class="pesquisabutton">
       <form id="pesquisando" action="norway.html">
