--- a/contato.html
+++ b/contato.html
@@ -33,6 +33,7 @@
     <link rel="icon" href="assets/iconpngauratrip.png" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/styleMobile.css" />
+    <link rel="stylesheet" href="assets/css/styleContato.css">
   </head>
   <body>
     <header id="iceland_contact" class="style_header">
@@ -48,49 +49,43 @@
         </ul>
       </div>
     </header>
-    <section>
-      <form id="formulario" action="./posContato.html">
-        <label for="nome">Nome completo</label>
-        <input
-          type="text"
-          id="nome"
-          placeholder="Digite o seu nome completo"
-          required
-        /><br />
-
-        <label for="email">E-mail</label>
-        <input
-          type="text"
-          id="email"
-          placeholder="Digite o seu e-mail"
-          required
-        />
-        <br />
-
-        <label for="assunto">Assunto do e-mail</label>
-        <input
-          type="text"
-          id="assunto"
-          placeholder="Digite o assunto do e-mail"
-          required
-        /><br />
-
-        <label for="conteudo">Conteúdo do e-mail</label>
-        <input
-          type="text"
-          id="conteudo"
-          placeholder="Digite o conteúdo do e-mail"
-          required
-        /><br />
-
-        <input type="submit" value="Enviar" />
-
-        <!-- <input
-        type="submit"
-        value="Enviar"
-        onclick="location.href='posContato.html'"
-      /> -->
-      </form>
+    <section id="sectioncontato">
+      <h2>Entre em contato conosco!</h2>
+      <div class="container">
+        <form id="formulario" action="./posContato.html">
+          <label for="nome">Nome completo</label>
+          <input
+            type="text"
+            id="nome"
+            placeholder="Digite o seu nome completo"
+            required
+          /><br />
+  
+          <label for="email">E-mail</label>
+          <input
+            type="text"
+            id="email"
+            placeholder="Digite o seu e-mail"
+            required
+          />
+          <br />
+  
+          <label for="assunto">Assunto do e-mail</label>
+          <input type="text"  id="assunto" placeholder="Digite o assunto do e-mail" required/>
+          <br/>
+  
+          <label for="conteudo">Conteúdo do e-mail</label>
+          <textarea name="" id="conteudo" cols="30" rows="10" placeholder="Digite a sua mensagem aqui"></textarea> <br/>
+  
+          <input type="submit" value="Enviar" />
+  
+          <!-- <input
+          type="submit"
+          value="Enviar"
+          onclick="location.href='posContato.html'"
+        /> -->
+        </form>
+      </div>
       <!-- <button class="teste">teste</button> -->
     </section>
     <footer>
