--- a/postar.html
+++ b/postar.html
@@ -46,6 +46,23 @@
       </div>
     </header>
 
+    <div class="container">
+      <h2>Criar Postagem</h2>
+      <form action="posContato.html" method="POST">
+          <div class="postagem">
+              <label for="titulo">Título:</label>
+              <input type="text" id="titulo" name="titulo" required>
+          </div>
+          <div class="postagem">
+              <label for="conteudo">Conteúdo:</label>
+              <textarea id="conteudo" name="conteudo" required></textarea>
+          </div>
+          <div class="postagem">
+              <button type="submit">Postar</button>
+          </div>
+      </form>
+  </div>
+
     <footer>
       <h2 class="teste">AuraTrip</h2>
       <h3 class="teste">Siga-nos em nossas redes sociais</h3>
