--- a/contato.html
+++ b/contato.html
@@ -38,9 +38,9 @@
   <body>
     <header id="iceland_contact" class="style_header">
       <div class="container_header">
-        <a href="index.php"
-          ><img class="logo_img" src="assets/auratrip-png.png" alt="logo"
-        /></a>
+        <a href="index.html">
+          <img class="logo_img" src="assets/auratrip-colored-png.png" width="30" height="30" alt="logo" />
+        </a>
         <ul class="buttons" id="home">
           <li><a href="index.html">Home</a></li>
           <li><a href="postar.html">Postar</a></li>
@@ -48,6 +48,7 @@
           <li><a href="contato.html">Contato</a></li>
         </ul>
       </div>
+      <h1 class="title_black">Contato</h1>
     </header>
     <section id="sectioncontato">
       <h2>Entre em contato conosco!</h2>
