--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <input type="submit" value="Buscar" id="buscar" />
       </form>
     </div>
+    <h1 class="title_tromso" style="margin-top: 100px;">AuraTrip</h1>
   </header>
   <section id="section_cards">
     <div class="container">
@@ -58,14 +59,17 @@
         <h1>Países pra você conhecer melhor!</h1>
       </div>
       <div class="presentation">
-        <div class="card" style="width: 18rem;">
-          <img src="assets/images/norway.jpg" class="card-img-top" alt="Noruega">
-          <div class="card-body">
-            <h5 class="card-title" style="margin-bottom: 0;">Noruega</h5>
-            <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a> -->
+        <a href="norway.html" style="text-decoration: none;">
+          <div class="card" style="width: 18rem;">
+            <img src="assets/images/norway.jpg" class="card-img-top" alt="Noruega">
+            <div class="card-body">
+              <h5 class="card-title" style="margin-bottom: 0;">Noruega</h5>
+              <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a> -->
+            </div>
           </div>
-        </div>
+        </a>
+        
 
         <div class="card" style="width: 18rem;">
           <img src="assets/images/iceland.jpg" class="card-img-top" alt="Finlândia">
