--- a/norway.html
+++ b/norway.html
@@ -47,6 +47,7 @@
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
             </div>
+            <h1 class="title_tromso">Noruega</h1>
         </header>
 
         <section id="section_cards">
@@ -89,23 +90,27 @@
                   </div>
                 </div>
 
-                <div class="card" style="margin: 15px;">
-                  <img src="https://res.cloudinary.com/dlsuopwkn/image/upload/c_scale,h_3264,w_4928/v1672024199/tromso.jpg" class="card-img-top" alt="Noruega">
-                  <div class="card-body">
-                    <h5 class="card-title" style="margin-bottom: 0;">Tromsø</h5>
-                    <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                <a href="tromso.html" style="text-decoration: none;">
+                  <div class="card" style="margin: 15px;">
+                    <img src="https://res.cloudinary.com/dlsuopwkn/image/upload/c_scale,h_3264,w_4928/v1672024199/tromso.jpg" class="card-img-top" alt="Noruega">
+                    <div class="card-body">
+                      <h5 class="card-title" style="margin-bottom: 0;">Tromsø</h5>
+                      <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                    </div>
                   </div>
-                </div>
-
-                <div class="card" style="margin: 15px;">
-                  <img src="https://res.cloudinary.com/dlsuopwkn/image/upload/c_scale,h_3264,w_4928/v1672024197/kjeragbolten.jpg" class="card-img-top" alt="Noruega">
-                  <div class="card-body">
-                    <h5 class="card-title" style="margin-bottom: 0;">Kjeragbolten</h5>
-                    <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                </a>
+                
+                <a href="kjeragbolten.html" style="text-decoration: none;">
+                  <div class="card" style="margin: 15px;">
+                    <img src="https://res.cloudinary.com/dlsuopwkn/image/upload/c_scale,h_3264,w_4928/v1672024197/kjeragbolten.jpg" class="card-img-top" alt="Noruega">
+                    <div class="card-body">
+                      <h5 class="card-title" style="margin-bottom: 0;">Kjeragbolten</h5>
+                      <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                    </div>
                   </div>
-                </div>
+                </a>
             </div>
           </div>
 
