--- a/postar.html
+++ b/postar.html
@@ -1,42 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta property="og:locale" content="pt_BR" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://auratrip.com.br/" />
-    <meta property="og:title" content="Auratrip - TCC Fatec Rubens Lara" />
-    <meta property="og:site_name" content="Auratrip" />
-    <meta
-      property="og:description"
-      content="Auratrip - Planejamento de viagens e Informações sobre lugares"
-    />
 
-    <meta property="og:image:type" content="image/jpg" />
-    <meta property="og:image:alt" content="Logo Auratrip" />
-    <meta property="og:image:width" content="300" />
-    <meta property="og:image:height" content="400" />
+<head>
+  <meta property="og:locale" content="pt_BR" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://auratrip.com.br/" />
+  <meta property="og:title" content="Auratrip - TCC Fatec Rubens Lara" />
+  <meta property="og:site_name" content="Auratrip" />
+  <meta property="og:description" content="Auratrip - Planejamento de viagens e Informações sobre lugares" />
 
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Auratrip - TCC Fatec Rubens Lara." />
-    <!-- google site verification -->
-    <meta
-      name="google-site-verification"
-      content="z_lH9tH0wbjtMz-3Gxh-qzwu25t_HTu6qWTVMIgMeiQ"
-    />
-    <title>Auratrip</title>
-    <link rel="icon" href="assets/iconpngauratrip.png" />
+  <meta property="og:image:type" content="image/jpg" />
+  <meta property="og:image:alt" content="Logo Auratrip" />
+  <meta property="og:image:width" content="300" />
+  <meta property="og:image:height" content="400" />
+
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Auratrip - TCC Fatec Rubens Lara." />
+  <!-- google site verification -->
+  <meta name="google-site-verification" content="z_lH9tH0wbjtMz-3Gxh-qzwu25t_HTu6qWTVMIgMeiQ" />
+  <title>Poste sua imagem</title>
+  <link rel="icon" href="assets/iconpngauratrip.png" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/styleMobile.css" />
+    <link rel="stylesheet" href="assets/norway.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css">
   </head>
 
   <body>
     <header id="main" class="style_header">
       <div class="container_header">
-        <a href="index.php"
-          ><img class="logo_img" src="assets/auratrip-png.png" alt="logo"
-        /></a>
+        <a href="index.html">
+          <img class="logo_img" src="assets/auratrip-colored-png.png" width="30" height="30" alt="logo" />
+        </a>
         <ul class="buttons" id="home">
           <li><a href="index.html">Home</a></li>
           <li><a href="postar.html">Postar</a></li>
@@ -44,24 +41,29 @@
           <li><a href="contato.html">Contato</a></li>
         </ul>
       </div>
+      <h1 class="title_tromso">Postar</h1>
     </header>
-
-    <div class="container">
-      <h2>Criar Postagem</h2>
-      <form action="posContato.html" method="POST">
-          <div class="postagem">
-              <label for="titulo">Título:</label>
-              <input type="text" id="titulo" name="titulo" required>
-          </div>
-          <div class="postagem">
-              <label for="conteudo">Conteúdo:</label>
-              <textarea id="conteudo" name="conteudo" required></textarea>
-          </div>
-          <div class="postagem">
-              <button type="submit">Postar</button>
-          </div>
-      </form>
-  </div>
+    
+    <section id="section_cards">
+      <div class="container">
+        <div class="title_cards"><h1>Criar Postagem</h1></div>
+        <form action="posContato.html" method="POST">
+            <div class="postagem">
+                <label for="titulo">Título:</label>
+                <input type="text" id="titulo" name="titulo" required>
+            </div>
+            <div class="postagem">
+                <div class="form-group">
+                  <label for="image">Selecione uma imagem:</label>
+                  <input type="file" id="image" name="image">
+                </div>
+            </div>
+            <div class="postagem">
+                <button type="submit">Postar</button>
+            </div>
+        </form>
+      </div>
+    </section>
 
     <footer>
       <h2 class="teste">AuraTrip</h2>
